# discord-api-template

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
src/api_template/: auth.py  config.py  main.py  models.py
tests/: test_api.py
